Format source code